# ClipSelect3

./: docker-compose.yml
backend/: .gitignore  Dockerfile  config.json  pyproject.toml
backend/app/: __init__.py  admin_paths.py  browse_router.py  cache.py  captions.py  chromadb.py  json_database.py  loaders.py  models.py  search_router.py  subtitle_importer.py  utils.py  walkers.py
backend/app/subtitle_parser/: __init__.py  cleaner.py  utils.py
frontend/: .env.production.sample  .eslintrc.js  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/: colors.json  constants.ts  types.ts  utils.ts
frontend/src/api/: ClipsApi.ts  index.ts
frontend/src/api/core/: OpenAPI.ts  request.ts
frontend/src/api/models/: Caption.ts  Media.ts  MediaMetaInformation.ts  SearchResult.ts  Season.ts  SeasonResponse.ts  Series.ts  SeriesResponse.ts  SparseEpisode.ts
frontend/src/api/services/: AdminService.ts  BrowseService.ts  ClipsService.ts  DefaultService.ts  SearchService.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/[series_name]/: page.tsx
frontend/src/app/[series_name]/[season_number]/[episode_number]/: page.tsx
frontend/src/app/starred/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/: CaptionList.tsx  CaptionText.tsx  ClipListHeader.tsx  EpisodeCard.tsx  Search.tsx  SearchResult.tsx  SeriesCard.tsx
frontend/src/components/ThemeRegistry/: EmotionCache.tsx  ThemeRegistry.tsx  theme.ts
